tests/baselines/reference/interfaceImplementation3.errors.txt
tests/cases/compiler/interfaceImplementation3.ts(8,7): error TS2420: Class 'C4' incorrectly implements interface 'I1'.
  Index signature is missing in type 'I1'.


==== tests/cases/compiler/interfaceImplementation3.ts (1 errors) ====
    interface I1 {
        iObj:{ };
        iNum:number;
        iAny:any;
        iFn():void;
    }
    
    class C4 implements I1 {
          ~~
!!! error TS2420: Class 'C4' incorrectly implements interface 'I1'.
!!! error TS2420:   Index signature is missing in type 'I1'.
        public iObj:{ };
        public iNum:number;
        public iFn() { }
    }
    
    
    